      text overlap.  Closes: #225968
      When backup is disabled, the <Continue> button is now centered.
      The <Yes>/<No> buttons in boolean questions are separated from
      the <Go Back> button.
    - With progress bars, minimal text height is set to 2, so that
      there is no box redrawing when 1 or 2 line long text is displayed.
  * Joey Hess
    - In the choices splitter, support "\ " as a way to have leading
      whitespace that is not stripped out. Did it this way because
      changing it to split on ", " instead of "*, *" might break stuff,
      and the spec is very vague.

 -- Denis Barbier <barbier@debian.org>  Tue,  2 Mar 2004 21:34:59 +0100

cdebconf (0.56) unstable; urgency=low

  * Translations
    - Ming Hua
      - Initial Traditional Chinese translation (zh_TW.po), by Tetralet
      - Reorganize the format of translation changelogs
    - Håvard Korsvoll
      - Updated Norwegian, nynorsk (nn.po) translation.
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation (uk.po)
    - Kęstutis Biliūnas
      - Updated Lithuanian translation (lt.po)
    - Jordi Mallach
      - Translate "Yes" as "Yes" instead of "No", to make this a bit useful.
    - Håvard Korsvoll
      - Updated Norwegian, bokmål translation, (nb.po). From Axel Bojer

 -- Joey Hess <joeyh@debian.org>  Tue,  2 Mar 2004 13:17:30 -0500

cdebconf (0.55) unstable; urgency=low

  * Denis Barbier
    - The confmodule_update_seen_questions function was broken, only
      one question was added/removed to the stack of already seen
      questions.
    - Always display templates of type 'error'.
    - Let debconf-loadtemplate exit with code 1 if it could not write
      debconf databases.  Closes: #221879
  * Thiemo Seufer
    - Fix that exit code check.
  * Gustavo Noronha Silva
    - Began coding in gtk frontend starting to write a druid-like
      interface for cdebconf much like the gnome2 frontend for the