@@ -18,6 +18,11 @@ cdebconf (0.57) UNRELEASED; urgency=low
       the <Go Back> button.
     - With progress bars, minimal text height is set to 2, so that
       there is no box redrawing when 1 or 2 line long text is displayed.
+    - If title is larger than other widgets, it was not displayed.
+      Main window is now enlarged in such a case so that title becomes
+      visible.
+    - When a title is too large to fit on a window, it is truncated
+      with ellipsis.  Closes: #235184
   * Joey Hess
     - In the choices splitter, support "\ " as a way to have leading
       whitespace that is not stripped out. Did it this way because
